tests/rosetta/out/Java/bifid-cipher.error
javac error: exit status 1
/tmp/TestMochiToJavabifid-cipher1666234384/001/BifidCipher.java:6: error: cannot find symbol
    static Map<String,any> square_to_maps(List<List<String>> square) {
                      ^
  symbol:   class any
  location: class BifidCipher
/tmp/TestMochiToJavabifid-cipher1666234384/001/BifidCipher.java:11: error: incompatible types: List<String> cannot be converted to List<List<String>>
            List<List<String>> row = square.get(x);
                                               ^
/tmp/TestMochiToJavabifid-cipher1666234384/001/BifidCipher.java:14: error: incompatible types: List<String> cannot be converted to List<List<String>>
                List<List<String>> ch = row.get(y);
                                               ^
/tmp/TestMochiToJavabifid-cipher1666234384/001/BifidCipher.java:15: error: incompatible types: List<List<String>> cannot be converted to String
                emap.put(ch, Arrays.asList(x, y));
                         ^
/tmp/TestMochiToJavabifid-cipher1666234384/001/BifidCipher.java:16: error: incompatible types: List<List<String>> cannot be converted to String
                dmap.put(String.valueOf(x) + "," + String.valueOf(y), ch);
                                                                      ^
/tmp/TestMochiToJavabifid-cipher1666234384/001/BifidCipher.java:21: error: cannot find symbol
        return new ED(emap, dmap);
                   ^
  symbol:   class ED
  location: class BifidCipher
/tmp/TestMochiToJavabifid-cipher1666234384/001/BifidCipher.java:24: error: cannot find symbol
        Object s = upper(text);
                   ^
  symbol:   method upper(String)
  location: class BifidCipher
/tmp/TestMochiToJavabifid-cipher1666234384/001/BifidCipher.java:27: error: cannot find symbol
        while (i < s.size()) {
                    ^
  symbol:   method size()
  location: variable s of type Object
/tmp/TestMochiToJavabifid-cipher1666234384/001/BifidCipher.java:43: error: incompatible types: List<Integer> cannot be converted to Map<String,List<Integer>>
            Map<String,List<Integer>> xy = emap.get(ch);
                                                   ^
/tmp/TestMochiToJavabifid-cipher1666234384/001/BifidCipher.java:44: error: incompatible types: List<Integer> cannot be converted to Integer
            row0.add(xy.get(0));
                           ^
/tmp/TestMochiToJavabifid-cipher1666234384/001/BifidCipher.java:45: error: incompatible types: List<Integer> cannot be converted to Integer
            row1.add(xy.get(1));
                           ^
/tmp/TestMochiToJavabifid-cipher1666234384/001/BifidCipher.java:54: error: incompatible types: String cannot be converted to Number
            int key = ((Number)((Number)String.valueOf(row0.get(j))).doubleValue() + ",").doubleValue() + ((Number)String.valueOf(row0.get(j + 1))).doubleValue();
                                                      ^
/tmp/TestMochiToJavabifid-cipher1666234384/001/BifidCipher.java:54: error: cannot find symbol
            int key = ((Number)((Number)String.valueOf(row0.get(j))).doubleValue() + ",").doubleValue() + ((Number)String.valueOf(row0.get(j + 1))).doubleValue();
                                                                                         ^
  symbol:   method doubleValue()
  location: class String
/tmp/TestMochiToJavabifid-cipher1666234384/001/BifidCipher.java:54: error: incompatible types: String cannot be converted to Number
            int key = ((Number)((Number)String.valueOf(row0.get(j))).doubleValue() + ",").doubleValue() + ((Number)String.valueOf(row0.get(j + 1))).doubleValue();
                                                                                                                                 ^
/tmp/TestMochiToJavabifid-cipher1666234384/001/BifidCipher.java:55: error: incompatible types: String cannot be converted to Number
            res = res + ((Number)dmap.get(key)).doubleValue();
                                         ^
/tmp/TestMochiToJavabifid-cipher1666234384/001/BifidCipher.java:66: error: incompatible types: List<Integer> cannot be converted to Map<String,List<Integer>>
            Map<String,List<Integer>> xy = emap.get(ch);
                                                   ^
/tmp/TestMochiToJavabifid-cipher1666234384/001/BifidCipher.java:67: error: incompatible types: List<Integer> cannot be converted to Integer
            coords.add(xy.get(0));
                             ^
/tmp/TestMochiToJavabifid-cipher1666234384/001/BifidCipher.java:68: error: incompatible types: List<Integer> cannot be converted to Integer
            coords.add(xy.get(1));
                             ^
/tmp/TestMochiToJavabifid-cipher1666234384/001/BifidCipher.java:86: error: incompatible types: String cannot be converted to Number
            int key = ((Number)((Number)String.valueOf(k1.get(j))).doubleValue() + ",").doubleValue() + ((Number)String.valueOf(k2.get(j))).doubleValue();
                                                      ^
/tmp/TestMochiToJavabifid-cipher1666234384/001/BifidCipher.java:86: error: cannot find symbol
            int key = ((Number)((Number)String.valueOf(k1.get(j))).doubleValue() + ",").doubleValue() + ((Number)String.valueOf(k2.get(j))).doubleValue();
                                                                                       ^
  symbol:   method doubleValue()
  location: class String
/tmp/TestMochiToJavabifid-cipher1666234384/001/BifidCipher.java:86: error: incompatible types: String cannot be converted to Number
            int key = ((Number)((Number)String.valueOf(k1.get(j))).doubleValue() + ",").doubleValue() + ((Number)String.valueOf(k2.get(j))).doubleValue();
                                                                                                                               ^
/tmp/TestMochiToJavabifid-cipher1666234384/001/BifidCipher.java:87: error: incompatible types: String cannot be converted to Number
            res = res + ((Number)dmap.get(key)).doubleValue();
                                         ^
/tmp/TestMochiToJavabifid-cipher1666234384/001/BifidCipher.java:98: error: cannot find symbol
        Map<String,any> maps = square_to_maps(squareRosetta);
                   ^
  symbol:   class any
  location: class BifidCipher
/tmp/TestMochiToJavabifid-cipher1666234384/001/BifidCipher.java:99: error: cannot find symbol
        Map<String,any> emap = maps.get("e");
                   ^
  symbol:   class any
  location: class BifidCipher
/tmp/TestMochiToJavabifid-cipher1666234384/001/BifidCipher.java:100: error: cannot find symbol
        Map<String,any> dmap = maps.get("d");
                   ^
  symbol:   class any
  location: class BifidCipher
Note: /tmp/TestMochiToJavabifid-cipher1666234384/001/BifidCipher.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
25 errors
